TAG: vocload-6-0-16-6
TAG: vocload-6-0-16-5
DATE: 09/28/2020
STAFF: lec
CHANGES: 
added OMIMpost.sh/call OMIMtermcheck.py to OMIMpost.sh

TAG: vocload-6-0-16-4
DATE: 09/23/2020
STAFF: lec
CHANGES: TR13072/ignore OBO/alt_id when processing Disease Ontology

TAG: vocload-6-0-16-3
DATE: 09/14/2020
STAFF: lec
CHANGES: TR13339/DO/exclude "{http:xxx}" from xref

TA: vocload-6-0-16-2
DATE: 09/14/2020
STAFF: lec
CHANGES: TR12571/MP.config/change _notetype_key = 1000

TAG: vocload-6-0-16-1
DATE: 08/21/2020
STAFF: sc
CHANGES: TR13204/I20 project/python 3.7 upgrade

TAG: vocload-6-0-15-3
TAG: vocload-6-0-15-2
DATE: 04/14/2020
STAFF: sc
CHANGES: chgrp mgi input file after removing terms from tag below
    so Terry may publish new file

TAG: vocload-6-0-15-1
DATE: 03/26/2020
STAFF: lec 
CHANGES: 
1) TR13273/emapa obo file: bug causing tree display issues in the pWI and feWI browsers
emap/emapload.sh : remove certain relationships from emapa obo file before processing

TAG: vocload-6-0-14-8
TAG: vocload-6-0-14-7
TAG: vocload-6-0-14-6
TAG: vocload-6-0-14-5
TAG: vocload-6-0-14-4
TAG: vocload-6-0-14-3
DATE: 07/11/2019
STAFF: lec 
CHANGES: 
1) TR13007/RNA Sequence project/add DOgxdslim to Disease Ontology (DO)

TAG: vocload-6-0-14-2
DATE: 05/15/2019
STAFF: lec 
CHANGES: 
1) TR13089/add GXD_HTSample to sanity check

TAG: vocload-6-0-14-1
DATE: 04/03/2019
STAFF: lec 
CHANGES: 
1) TR12963/teleuse-to-mgd_java_api
2) TR13017/retire MouseCyc

TAG: vocload-6-0-13-5
DATE: 01/09/2019
STAFF: lec 
CHANGES: TR12963/SO.config/run first time as full/weekly as incremental

#
# tags 3, 4 were not added to HISTORY
#

TAG: vocload-6-0-13-2
DATE: 09/13/2018
STAFF: lec 
CHANGES: TR12955/GO.config/change DATA_DIR

TAG: vocload-6-0-13-1
DATE: 09/04/2018
STAFF: lec 
CHANGES: TR12734/GenFevah/Mouse Genome Project
remove biotype_vega.config

TAG: vocload-6-0-12-4
DATE: 08/16/2018
STAFF: lec
CHANGES: TR12928/fix insert DAG_DAG bug

TAG: vocload-6-0-12-3
DATE: 07/31/2018
STAFF: sc